<resources>
    <string name="app_name">finalproject</string>
    <string name="login">Login</string>
    <string name="registername">register</string>
    <string name="nameproject">E-Book Computer Science</string>
    <string name="cancle">Cancle</string>
    <string name="forget">forgot?</string>
    <string name="register">Donot have a account?</string>
    <string name="haveregister">Have an account?Login</string>
    <string name="title_activity_ebook">ebook</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabbbb">tabbbb</string>
    <string name="title_activity_tapconten">My E-Book</string>
    <string name="title_activity_home">home</string>
    <string name="title_activity_menu">menu</string>
    <item name="fab" type="id" />
</resources>
